name:                Reactives
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Reactives#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2016 Example Author Name
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reactive, Event, RunReactive, Utils
                     , Widgets.Activatable
                     , Widgets.TextField
  build-depends:       base
                     , sdl2
                     , linear
                     , OneFileLens
                     , DeclarativeGraphics
                     , DeclarativeGraphics-Cairo
                     , DeclarativeGraphics-SDL
  default-language:    Haskell2010

executable Reactives-exe
  hs-source-dirs:      app
  other-modules:       FormUtils
                     , Widgets.Expression
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , linear
                     , DeclarativeGraphics
                     , DeclarativeGraphics-Cairo
                     , DeclarativeGraphics-SDL
                     , Reactives
  default-language:    Haskell2010
