name:                Reactives
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Reactives#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2016 Example Author Name
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reactive, Event, RunReactive, Utils, FormUtils
                     , Widgets.Activatable
                     , Widgets.TextField
                     , Widgets.Button
                     , Widgets.DropDownList
  build-depends:       base
                     , sdl2
                     , linear
                     , recursion-schemes
                     , containers
                     , lens
                     , DeclarativeGraphics
                     , DeclarativeGraphics-Cairo
                     , DeclarativeGraphics-SDL
  default-language:    Haskell2010

executable Reactives-exe
  hs-source-dirs:      app
  other-modules:       Widgets.Type
                     , Widgets.Expression
                     , Widgets.Record
                     , Backend
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens
                     , linear
                     , containers
                     , recursion-schemes
                     , DeclarativeGraphics
                     , DeclarativeGraphics-Cairo
                     , DeclarativeGraphics-SDL
                     , Reactives
  default-language:    Haskell2010
