name:                Reactives
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/matheus23/Reactives#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Krüger
maintainer:          philipp.krueger1@gmail.com
copyright:           2016-2018 Philipp Krüger
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reactive, Event, RunReactive, Utils, FormUtils
                     , Widgets.Activatable
                     , Widgets.TextField
                     , Widgets.Button
                     , Widgets.DropDownList
  build-depends:       base
                     , sdl2
                     , linear
                     , recursion-schemes
                     , containers
                     , lens
                     , DeclarativeGraphics
                     , DeclarativeGraphics-Cairo
                     , DeclarativeGraphics-SDL
  default-language:    Haskell2010
